data/derived/comb/progs/unify/prog8241.ml.out
Characters 150-160:
  |h'::t' -> if h+h' > 10 then [addHelper (t,t')] @ [1 + h' + h] 
                                                     ^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         'a list
